@@ -27,8 +27,14 @@ module ActionView
 
     def render_partial(view, object = nil, local_assigns = {}, as = nil)
       object ||= local_assigns[:object] ||
-        local_assigns[variable_name] ||
-        view.controller.instance_variable_get("@#{variable_name}") if view.respond_to?(:controller)
+        local_assigns[variable_name]
+
+      if view.respond_to?(:controller)
+        object ||= ActiveSupport::Deprecation::DeprecatedObjectProxy.new(
+          view.controller.instance_variable_get("@#{variable_name}"),
+          "@#{variable_name} will no longer be implicitly assigned to #{variable_name}"
+        )
+      end
 
       # Ensure correct object is reassigned to other accessors
       local_assigns[:object] = local_assigns[variable_name] = object
